# EEGraSP

./: .zenodo.json  Makefile  README.rst  Untitled.ipynb  pyproject.toml  tests.py
.github/workflows/: test-main.yml
doc/: index.rst  sg_execution_times.rst
doc/reference/: graph.rst  index.rst  interpolate.rst  utils.rst  viz.rst
eegrasp/: __init__.py  eegrasp.py  graph.py  interpolate.py  io.py  utils.py  utils_examples.py  viz.py
eegrasp/tests/: io_cache_comparison.py  test_graph.py  test_interpolate.py  test_utils.py  test_utils_examples.py  test_viz.py
examples/: ERP_reconstruction.py  electrode_distance.py  graph_learning.py  interpolate_channel.py  make_graph_gaussian.py  plot_eeg_graph.py
