[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EEGraSP"
version = "0.0.2"
authors = [
  { name="Julio Rodino", email="jrodino14@gmail.com" },
  { name="Alejandro Weinstein", email="alejandro.weinstein@gmail.com"},
  { name="Andres Herrera", email="herrerandresc@gmail.com"},
  { name="Camilo Jara", email="camilo.jara@ug.uchile.cl"},
  { name="Lucas Cortés", email="lucascortesg@gmail.com"}
]
description = "Package for EEG Graph signal Processing"
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies= [
  "scipy",
  "numpy",
  "mne",
  "matplotlib",
  "pygsp2",
  "tqdm",
  "joblib"
]

[project.urls]
Homepage = "https://github.com/gsp-eeg/EEGraSP"
Issues = "https://github.com/gsp-eeg/EEGraSP/issues"


[tool.ruff]
exclude = [
    "doc",
    "docs",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv"
]
line-length = 88
indent-width = 4
show-fixes = true
fix = true
unsafe-fixes = true
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q", "D"]
ignore = ["F401", "D205", "D100", "D103"]
extend-select = ["D400"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
lines-after-imports = 1
lines-between-types = 1
length-sort = true
order-by-type = true
detect-same-package = true
from-first = false
section-order = ["future", "standard-library", "first-party", "local-folder", "third-party"]
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false
max-doc-length = 88
max-line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"


[tool.yapf]
based_on_style = "pep8"
split_before_named_assigns = false
split_before_expression_after_opening_paren = false
column_limit = 88


[tool.isort]
skip = ["__init__.py"]
